--- a/app/blocks/dropdown/dropdown.scss
+++ b/app/blocks/dropdown/dropdown.scss
@@ -44,6 +44,8 @@
     flex: 1;
     cursor: pointer;
     line-height: (19 / 16);
+    transition: color $ease-main;
+    -webkit-tap-highlight-color: auto;
 
     @include rule(font-size, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
     @include rule(padding-left, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 15));
