--- a/app/blocks/file-uploader/file-uploader.pug
+++ b/app/blocks/file-uploader/file-uploader.pug
@@ -13,7 +13,7 @@ mixin nd-file-uploader(data)
   +b.FORM.nd-file-uploader&attributes(attributes)(data-uploader-block)
     +e.output(data-files-output)
     +e.buttons
-      +nd-button('label').__label!=nameInput
+      +nd-button('label')._pad10.__label!=nameInput
         +input(type="file" multiple="multiple").nd-hide.js-file-upload
-      +nd-button('button', true)(type="submit" data-server-callback="uploadFiles").__button.js-file-send!=nameSubmit
+      +nd-button('button', true)(type="submit" data-server-callback="uploadFiles")._pad10.__button.js-file-send!=nameSubmit
     block
