--- a/app/blocks/grid/nd-grid.scss
+++ b/app/blocks/grid/nd-grid.scss
@@ -64,6 +64,10 @@
     @include rule(margin-top, (xl: -37px, xlg: -37, lg: -37, md: -37, sm: -23));
   }
 
+  &_int38 {
+    @include rule(margin-top, (xl: -38px, xlg: -38, lg: -38, md: -38, sm: -23));
+  }
+
   &__col {
     display: inline-block; // fallback для старых браузеров
     box-sizing: border-box;
@@ -144,6 +148,10 @@
 
     #{$b}_int37 & {
       @include rule(padding-top, (xl: 37px, xlg: 37, lg: 37, md: 37, sm: 23));
+    }
+
+    #{$b}_int38 & {
+      @include rule(padding-top, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 23));
     }
   }
 
