--- a/app/pages/host-account/host-account-kyc.pug
+++ b/app/pages/host-account/host-account-kyc.pug
@@ -36,11 +36,11 @@ block content
             +e.row
               +e.column_left
                 +nd-section-title._fz22 Know Your Client test
-                +e.text_fz18._indent
+                +e.text_fz18._indent._mt56
                   p Spacepul Company is a business organization that receives and sends money. Based on international legislation, we are required to request important beneficiary information to ensure a safe and secure payment process.
                   p
                     b Please give us the information we need to meet our legal requirements. Images must be clear and legible.
-              +e.column_right
+              +e.column_right._right_w482
                 +e.FIGURE.figure
                   +e.IMG.figure-image(src="assets/images/nd/il-search.svg")
             +e.row
@@ -49,8 +49,8 @@ block content
                   +form-section()(data-ubo-element)
                     +form-section-header
                       +form-section-title._fz22 Owner <span data-ubo-number>1</span> (Ultimate Beneficial Owner)
-                    +form-section-content
-                      +nd-grid.nd-grid_gap25.nd-grid_int37
+                    +form-section-content._mt44
+                      +nd-grid.nd-grid_gap25.nd-grid_int38
                         +nd-grid-col({xl: 12})
                           +form-section-wrapper
                             +nd-form-box('Name')._bg-white
@@ -115,14 +115,14 @@ block content
                           +form-section-wrapper
                             +nd-form-box('Postal Code')._bg-white
                               +nd-input(type="text" name="ubo-1[postcode]" placeholder="Postal Code")
-                  +form-section
+                  +form-section._mt47
                     +e.links
-                      +nd-link-icon('nd-plus').__link.js-add-ubo(href="#" data-url-template="assets/data/nd-templates.json" data-max-ubo-count="4") Add one more UBO
+                      +nd-link-icon('nd-plus').__link_fz16._stolzl.js-add-ubo(href="#" data-url-template="assets/data/nd-templates.json" data-max-ubo-count="4") Add one more Owner
                     +e.buttons
                       +nd-button('button', true).__button_wide Save information
-              +e.column_right
+              +e.column_right._right_w482
                 +nd-section-title._fz22 Necessary Documents
-                +nd-section-content
+                +nd-section-content._mt42
                   +nd-files-card({image: 'assets/images/nd/nd-upload.svg', subtitle: 'Upload', title: 'Proof of identity', uploader: true, describe: 'ID of the individual representing the company. Needs to be a valid driving licence (front and back) or the details page of passport.'}).__card
                   +nd-files-card({image: 'assets/images/nd/nd-upload.svg', subtitle: 'Upload', title: 'Certificate of incorporation', uploader: true, describe: 'Formal proof of the company’s existence. Needs to include business name, activity, registered address and shareholding.'}).__card
                   +nd-files-card({image: 'assets/images/nd/nd-upload.svg', subtitle: 'Upload', title: 'Confirmation statement', uploader: true, describe: 'Latest confirmation statement (if not available, certificate of incorporation)'}).__card
