--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -121,6 +121,12 @@
       }
     }
 
+    &_mt47 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 47px, xlg: 47, lg: 47, md: 47, sm: 47));
+      }
+    }
+
     &_mt54 {
       &:not(:first-child) {
         margin-top: 54px;
@@ -280,6 +286,12 @@
     &_mt30 {
       &:not(:first-child) {
         @include rule(margin-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+      }
+    }
+
+    &_mt44 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 30));
       }
     }
   }
@@ -734,6 +746,18 @@
       @include screen('sm', max, 2) {
         margin-top: pxtovw(23, 375);
       }
+    }
+  }
+
+  &__link {
+    &_fz16 {
+      line-height: (19 / 16);
+
+      @include rule(font-size, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+    }
+
+    &_stolzl {
+      font-family: $font-stolzl;
     }
   }
 
