--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -75,7 +75,7 @@ block content
               +nd-link(href="host-account-settings-notifications.html") Spacepool - Host Account - Settings | Notification settings (host-account-settings-notifications.html)
               +nd-link(href="host-account-finances.html") Spacepool - Host Account - Finances (host-account-finances.html)
               +nd-link(href="host-account-finances-statements.html") Spacepool - Host Account - Finances | Statements (All breaks) (host-account-finances-statements.html)
-              //- +nd-link(href="host-account-kyc.html") Spacepool - Host Account - KYC (host-account-kyc.html)
+              +nd-link(href="host-account-kyc.html") Spacepool - Host Account - KYC (host-account-kyc.html)
           +e.group#nav-ga
             +e.head
               +page-title Страницы Guest Account
