--- a/app/blocks/photo-preview/nd-photo-preview.scss
+++ b/app/blocks/photo-preview/nd-photo-preview.scss
@@ -29,6 +29,12 @@
     left: 0;
     width: 100%;
     z-index: 2;
+
+    @include screen('sm', max, 2) {
+      box-sizing: border-box;
+      padding-left: pxtovw(60, 375);
+      padding-top: pxtovw(4, 375);
+    }
   }
 
   &__number {
@@ -214,7 +220,7 @@
     background-color: $nd-color-bg;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L11.5 11.5' stroke='black'/%3E%3Cpath d='M11.5 1L1 11.5' stroke='black'/%3E%3C/svg%3E");
+    background-image: url("../images/bg/bg-cross.svg");
 
     @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
     @include rule(background-size, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
@@ -224,7 +230,68 @@
     #{$b}.is-error & {
       box-shadow: 0 0 0 1px $nd-color-basic;
       background-color: $nd-color-main;
-      background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L11.5 11.5' stroke='white'/%3E%3Cpath d='M11.5 1L1 11.5' stroke='white'/%3E%3C/svg%3E ");
+      background-image: url("../images/bg/bg-cross-white.svg");
+    }
+  }
+
+  &__manipulators {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    box-shadow: 0 0 0 1px $nd-color-border-gray;
+    z-index: 3;
+
+    @include rule(border-bottom-right-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+    @include rule(border-top-left-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+
+    @include screen('sm', max, 2) {
+      display: flex;
+    }
+  }
+
+  &__manipulator {
+    @include rule(width, (xl: 27px, xlg: 27, lg: 27, md: 27, sm: 27));
+    @include rule(height, (xl: 27px, xlg: 27, lg: 27, md: 27, sm: 27));
+
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 8px 14px;
+
+    @include screen('xlg', max, 2) {
+      background-size: pxtovw(8, 1660) pxtovw(14, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      background-size: pxtovw(8, 1366) pxtovw(14, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      background-size: pxtovw(8, 960) pxtovw(14, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      background-size: pxtovw(8, 375) pxtovw(14, 375);
+    }
+
+    &:not(:first-child) {
+      border-left: 1px solid $nd-color-border-gray;
+    }
+
+    &_up {
+      background-image: url('../images/bg/bg-arrow-up.svg');
+
+      &:disabled {
+        background-image: url('../images/bg/bg-arrow-up-gray.svg');
+      }
+    }
+
+    &_down {
+      background-image: url('../images/bg/bg-arrow-down.svg');
+
+      &:disabled {
+        background-image: url('../images/bg/bg-arrow-down-gray.svg');
+      }
     }
   }
 
