--- a/app/components/rs-form/rs-form.pug
+++ b/app/components/rs-form/rs-form.pug
@@ -70,7 +70,7 @@ mixin rs-form(isMeeting)
                     else
                       option(value=i) #{i} months
                   -}
-          +nd-grid-col({xl: 3})
+          +nd-grid-col({xl: 3, sm: 4})
             +form-section-wrapper
               +nd-form-box('', 'div')
                 +nd-select(name="phoneCode" placeholder="Phone code" required data-mobile-title="Phone code").js-nd-select
@@ -79,7 +79,7 @@ mixin rs-form(isMeeting)
                   option(value="44" selected) +44
                   option(value="45") +45
                   option(value="80") +80
-          +nd-grid-col({xl: 9})
+          +nd-grid-col({xl: 9, sm: 8})
             +form-section-wrapper
               +nd-form-box('Phone number')
                 +nd-input(type="tel" name="phoneNumber" required)
