--- a/app/components/search-panel/search-panel.pug
+++ b/app/components/search-panel/search-panel.pug
@@ -48,7 +48,7 @@ mixin search-panel()
       +e.FORM.block.hide(data-step="location")
         +e.locations
           +nd-form-box('Location')._bg-white._h40._sm-h50
-            +nd-input()._h40._sm-h50._open.js-autocomplete(type="text" name="location" placeholder="location" data-autocomplete-url="assets/data/locations-autocomplete.json" autocomplete="off")
+            +nd-input()._h40._sm-h50._open.js-autocomplete.js-shift-on-focus(type="text" name="location" placeholder="location" data-autocomplete-url="assets/data/locations-autocomplete.json" autocomplete="off")
             +autocomplete-list()
         +nd-button('button', true).__button.nd-hide-sm(type="submit") Show
         +e.describe
