--- a/app/pages/signup/nd-signup-ready.pug
+++ b/app/pages/signup/nd-signup-ready.pug
@@ -4,6 +4,7 @@ block head
   - var pageTitle = 'Spacepool - Sign Up'
 
 block bodyClasses
+  - var bodyCls = ' is-no-userpanel'
   - var isNoFooter = true
   - var scripts = ['other']
 
