--- a/app/components/offer-card/offer-card.scss
+++ b/app/components/offer-card/offer-card.scss
@@ -96,7 +96,7 @@
     }
 
     &.is-active {
-      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.03), 2px 2px 2px rgba(0, 0, 0, 0.04), 3px 3px 3px rgba(0, 0, 0, 0.02), inset 0 0 0 1px $nd-color-main;
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, .03), 2px 2px 2px rgba(0, 0, 0, .04), 3px 3px 3px rgba(0, 0, 0, .02), inset 0 0 0 1px $nd-color-main;
     }
   }
 
